--- a/Backend/package.json
+++ b/Backend/package.json
@@ -18,6 +18,7 @@
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.3",
-    "nodemailer": "^6.9.16"
+    "nodemailer": "^6.9.16",
+    "zustand": "^5.0.3"
   }
 }
