--- a/Backend/.env
+++ b/Backend/.env
@@ -1,5 +1,5 @@
 PORT=3000
-MONGOURL=mongodb://localhost:27017/Collegeproject
+MONGOURL=mongodb+srv://narayandeshpande92:QdTO601HuXD5Nl7I@cluster0.dg7th.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 EMAIL_USER=narayandeshpande92@gmail.com
 EMAIL_PASS=qavb tvvg rykt rnvt
 JWT_TOKEN=30f3IV/6vHHH18yJzfnzNUWL5LsZFR6lovaeaL2ARqs=
